PwaArchive-access/projects/nutchwax/nutchwax-webapp/src/main/webapp/css/newStyle.css
body {
  margin: 0;
  padding: 0;
  font-size: 12px !important;
  font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif !important;
  outline: none;
  background-color: white !important;
  /*padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);*/
}

body#home-search .urlBlock a:visited {
color:#8b14d5 !important;
}


input:focus{
-webkit-user-select:none;
-moz-user-select:none;
-ms-user-select:none;
-o-user-select:none; 
}

.stylish-input-group button {
  border: 0;
  background: transparent;
  outline: none;
}
#searchForm .form-control {
  position: relative;
  height: 45px !important;
  border-radius: 10px !important;
  text-align: left;
  transition: ::-webkit-input-placeholder 0.5s ease 0s;
  transition: ::-moz-placeholder 0.5s ease 0s;
  transition: :-ms-input-placeholder 0.5s ease 0s;
  transition: :-moz-placeholder 0.5s ease 0s;
  background-color: #eaeaea !important;
  padding-left: 15px;
  border: 1px solid transparent !important;
  outline: none !important;
  font-size: 19px !important;
  font-family: 'Roboto', sans-serif !important;
  transition: box-shadow 0.5s ease 0s !important;
  transition: background-color 0.5s ease 0s !important;
  -webkit-box-shadow: 0px 4px 5px -2px rgba(0, 0, 0, 0);
  box-shadow: 0px 4px 5px -2px rgba(0, 0, 0, 0);
  padding-top: 3px;
  margin-top: 4px;
  padding-right: 13% !important;
}
/* NEW STYLE: Hover search bar effect*/
#searchForm .form-control:focus {
  -webkit-box-shadow: 0px 4px 5px -2px rgba(0, 0, 0, 0.35);
  box-shadow: 0px 4px 5px -2px rgba(0, 0, 0, 0.35);
  border-bottom: 1px solid transparent;
  background-color: white !important;
}
/* NEW STYLE: forcing 100% width on the search bar */
#searchBarBlock {
  position: relative !important;
  z-index: 999999;
  margin-top: -78px !important;
  display: block !important;
  width: 100% !important;
  font-family: 'Roboto', sans-serif !important;
}
#buttonSearch button {
  position: relative;
  z-index: 1000000 !important;
  right: 30px !important;
  top: 3px;
  padding: 12px 0px 12px 0 !important;
  outline: none;
  border: none;
  background-color: transparent;
}
#ionSlider {
  float: left;  
  width: 100%;
  height: 80px !important;
  margin-top: -3px;
  margin-bottom: 10px;
  font-size: 1em !important;
  text-align: center !important;
  position: relative;
  z-index: 999997
}
#sliderCircleRight {
  position: relative;
  padding-right: 9px;
  padding-top: 0px;
  margin-left: 0px;
  background: transparent url(../img/calendario.svg) no-repeat right 6px;
  background-size: 52px;
  text-decoration: none !important;
  font-size: 1.15em !important;
  height: 73px;
  height: 79px;
  padding-left: 36px;
  color: #1a73ba;
  z-index: -1;
}
#sliderCircleLeft {
  position: relative;
  padding-right: 36px;
  margin-left: 0px;
  background: transparent url(../img/calendario.svg) no-repeat 0px 6px;
  background-size: 52px;
  text-decoration: none !important;
  font-size: 1.15em !important;
  height: 79px;
  padding-left: 7px;
  color: #1a73ba;
  z-index: -1;
}
/* NEW style: calendar month and day */
#calendarDayLeft {
  position: relative;
  top: 29px;
  left: -9.8px;
  font-size: 1.1em;
  letter-spacing: -1px;
  color: #1a73ba;
  font-family: helvetica, arial !important;
}
#calendarMonthLeft {
  position: relative;
  top: 8.3px;
  left: 12px;
  font-size: 0.9em;
  letter-spacing: 0px;
  color: #1a73ba;
  font-family: helvetica, arial !important;
}
#calendarDayRight {
  position: relative;
  top: 27px;
  left: -8.5px;
  font-size: 1.1em;
  letter-spacing: -1px;
  color: #1a73ba;
  font-family: helvetica, arial !important;
}
#calendarMonthRight {
  position: relative;
  top: 8.3px;
  left: 11px;
  font-size: 0.9em;
  letter-spacing: 0px;
  color: #1a73ba;
  font-family: helvetica, arial !important;
}
#calendarYearLeft {
  position: relative;
  bottom: 30px;
  left: 1.1px;
  padding-top: -2px !important;
  font-size: 1.2em;
  font-family: helvetica, arial !important;
}
#calendarYearRight {
  position: relative;
  bottom: 29px;
  left: 3px;
  padding-top: 1px !important;
  font-size: 1.2em;
  font-family: helvetica, arial !important;
}
ion-item {
  --pin-display: none !important;
}
#searchForm {
  margin-top: 25px;

}
/* NEW STYLE: Change placeholder */ 
::-webkit-input-placeholder { /* Chrome/Opera/Safari */
  color: #777 !important;
  font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif !important;
  font-weight: 100 !important;
}
::-moz-placeholder { /* Firefox 19+ */
  color: #b1afaf !important;
  font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif !important;
  font-weight: 100 !important;
}
:-ms-input-placeholder { /* IE 10+ */
  color: #b1afaf !important;
  font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif !important;
  font-weight: 100 !important;
}
:-moz-placeholder { /* Firefox 18- */
  color: #b1afaf !important;
  font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif !important;
  font-weight: 100 !important;
}
#form_container {
  margin-top: 10px;
}
.faded {
  opacity: 0.6;
}
#resultados-lista {
  font-family: roboto !important;
  margin-left: 1px !important;
  margin-right: 1px !important;
  margin-top: 1px;
}
#resultados-lista ul {
  list-style-type: none;
  padding-left: 0px;
  /* NEW STYLE: decrease distance search results area from search bar */
  margin-top: -20px !important;
  font-size: 1.2em !important;
  font-family: Roboto !important;
  border: none;
}
#resultados-lista ul li {
  list-style-type: none;
  padding-left: 0px;
  margin-top: -20px !important;
  font-family: inherit;
  background-color: #fcfafa !important;
}
#resultados-lista ul li .resumo {
  line-height: 20px !important;
  font-size: 16px !important;
  white-space: normal !important;
}
#resultados-lista ul h2 a {
  color: #1c75c0 !important;
  font-size: 1.18em !important;
  font-family: 'Roboto', sans-serif;
  line-height: normal;
}
/* ... */

